# CommonUtility

./: .clang-format  .gitignore  CMakeLists.txt  CommonUtility.sln  build-linux.sh
Any/: Any.hpp  CMakeLists.txt  main.cpp
ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  main.cpp
ArgumentVerifier/: ArgumentVerifier.hpp  CMakeLists.txt  main.cpp
CommonUtility/: ArgumentParser.cpp  ArgumentParser.h  AsyncIO.hpp  CommonUtility.vcxproj  CommonUtility.vcxproj.filters  ConfigurationManager.cpp  ConfigurationManager.h  Convert.cpp  Convert.h  DateTime.cpp  DateTime.h  DynamicBuffer.hpp  Encoding.cpp  Encoding.h  Globals.h  Guid.cpp  Integer.hpp  JavaMethod.hpp  LogStream.cpp  LogStream.h  Registry.cpp  Registry.h  Scopes.hpp  SmartPointer.hpp  String.hpp  StringBuilder.hpp  StringConvertion.cpp  StringConvertion.h  ThreadLocalStorage.hpp  console_table.hpp  main.cpp  pch.h
ConfigurationManager/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  main.cpp
ConsoleTable/: CMakeLists.txt  ConsoleTable.hpp  main.cpp
Convert/: Base64.cpp  Base64.h  CMakeLists.txt  Convert.cpp  Convert.h  main.cpp
DateTime/: CMakeLists.txt  DateTime.cpp  DateTime.h  main.cpp
DynamicLibraryLoader/: CMakeLists.txt  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  main.cpp
Encoding/: CMakeLists.txt  Encoding.cpp  Encoding.h  main.cpp
Guid/: CMakeLists.txt  Guid.cpp  Guid.h  main.cpp
IOCP/: CMakeLists.txt  CriticalSection.cpp  CriticalSection.h  ErrorCodes.h  ErrorHandler.cpp  ErrorHandler.h  IOCP.cpp  IOCP.h  ThreadHelper.cpp  ThreadHelper.h  Types.h  main.cpp  stdafx.cpp  stdafx.h
IOCPCommunication/: AsyncConnectionWrapper.cpp  AsyncConnectionWrapper.hpp  AsyncConnectionWrapperContainer.cpp  AsyncConnectionWrapperContainer.h  CMakeLists.txt  CriticalSection.cpp  ErrorCodes.h  ErrorHandler.cpp  IConnectionBase.cpp  IConnectionBase.h  IOCPCommunication.cpp  IOCPCommunication.h  IOCompletionPort.cpp  IOCompletionPort.h  OverlappedWrapper.cpp  OverlappedWrapper.h  ThreadHelper.cpp  main.cpp  stdafx.h
Integer/: CMakeLists.txt  Integer.hpp  main.cpp
JNIUtilities/: CMakeLists.txt  JNIEnviroment.cpp  JNIEnviroment.h  JNIUtilities.cpp  JNIUtilities.h  JavaMethod.hpp  main.cpp
JavaMethod/: CMakeLists.txt  JavaMethod.hpp
LexicalCast/: CMakeLists.txt  LexicalCast.hpp  main.cpp
LogStream/: CMakeLists.txt  LogStream.cpp  LogStream.h
Logger/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp
Manual/: CMakeLists.txt  Manual.hpp  main.cpp
MemoryLeakDetector/: CMakeLists.txt  MemoryLeakDetector.cpp  MemoryLeakDetector.h  main.cpp
Path/: CMakeLists.txt  Path.cpp  Path.h  main.cpp
Registry/: CMakeLists.txt  Registry.cpp  main.cpp
Scope/: CMakeLists.txt  Scope.hpp
SmartPointer/: CMakeLists.txt  SmartPointer.hpp  main.cpp
StringBuilder/: CMakeLists.txt  StringBuilder.hpp
StringConvertion/: CMakeLists.txt  StringConvertion.cpp  StringConvertion.h
StringEx/: CMakeLists.txt  String.hpp  main.cpp
System/: CMakeLists.txt  System.cpp  System.h
Thread/: CMakeLists.txt  ConditionVariant.cpp  ConditionVariant.h  condition_variable.cpp  condition_variable.h  event.cpp  event.h  main.cpp  mutex.cpp  mutex.h  thread_local_storage.hpp
ThreadLocalStorage/: CMakeLists.txt  ThreadLocalStorage.hpp
Windows/: CMakeLists.txt
Windows/IOCP/: CMakeLists.txt  IConnectionBase.cpp  IConnectionBase.h  IOCP.cpp  IOCP.h  ThreadHelper.h  Types.h
Windows/Registry/: CMakeLists.txt  Registry.cpp  Registry.h  main.cpp
console_table/: CMakeLists.txt  console_table.hpp  main.cpp
