SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)
PROJECT(CommonUtility)

SET(PROJECT_ROOT_PATH               "${PROJECT_SOURCE_DIR}")
SET(CMAKE_BUILD_TYPE                "Release")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  "${CMAKE_BINARY_DIR}/bin")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY  "${CMAKE_BINARY_DIR}/bin")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY  "${CMAKE_BINARY_DIR}/bin")

IF(WIN32)
    SET(CMAKE_CXX_FLAGS             "${CMAKE_CXX_FLAGS} /MP")
    SET(CMAKE_CXX_FLAGS_RELEASE     "${CMAKE_CXX_FLAGS_RELEASE} /O2 /W0")
ELSE(WIN32)
    SET(CMAKE_CXX_FLAGS_RELEASE     "${CMAKE_CXX_FLAGS_RELEASE} -O3 -w")
ENDIF(WIN32)

IF(UNIX AND NOT APPLE)
    SET(LINUX 1)
    ADD_DEFINITIONS(-DLINUX=1)
ENDIF(UNIX AND NOT APPLE)

IF(APPLE)
    SET(APPLE 1)
    ADD_DEFINITIONS(-DAPPLE=1)
ENDIF(APPLE)

IF(WIN32)
    SET(WINDOWS 1)
    ADD_DEFINITIONS(-DWINDOWS=1)
ENDIF(WIN32)

IF(WIN32)
    ADD_SUBDIRECTORY(IOCP)
    ADD_SUBDIRECTORY(Registry)
    ADD_SUBDIRECTORY(StringConvertion)
ENDIF(WIN32)

#ADD_SUBDIRECTORY(Path)
ADD_SUBDIRECTORY(Logger)
#ADD_SUBDIRECTORY(LexicalCast)
ADD_SUBDIRECTORY(ArgumentParser)
#ADD_SUBDIRECTORY(ArgumentVerifier)
#ADD_SUBDIRECTORY(console_table)
ADD_SUBDIRECTORY(Convert)
ADD_SUBDIRECTORY(DateTime)
#ADD_SUBDIRECTORY(Encoding)
#ADD_SUBDIRECTORY(Guid)
ADD_SUBDIRECTORY(Integer)
# ADD_SUBDIRECTORY(JNIUtilities)
ADD_SUBDIRECTORY(Scope)
ADD_SUBDIRECTORY(SmartPointer)
ADD_SUBDIRECTORY(StringEx)
ADD_SUBDIRECTORY(StringBuilder)
ADD_SUBDIRECTORY(Thread)
ADD_SUBDIRECTORY(ThreadLocalStorage)
ADD_SUBDIRECTORY(MemoryLeakDetector)
ADD_SUBDIRECTORY(DynamicLibraryLoader)
SET_TARGET_PROPERTIES(${PRJ_TARGET} PROPERTIES FOLDER "CMakePredefinedTargets")