PROJECT(DynamicLibraryLoader)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

FILE(GLOB_RECURSE INCLUDE_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

FILE(GLOB_RECURSE SOURCE_FILES 
        ${CMAKE_CURRENT_SOURCE_DIR}/*.c
        ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

SOURCE_GROUP("Header Files" FILES "${INCLUDE_FILES}")
SOURCE_GROUP("Source Files" FILES "${SOURCE_FILES}")

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${INCLUDE_FILES}
    ${SOURCE_FILES}
)

IF(UNIX)
    SET(EX_LINK_LIBRARIES dl)
ELSE(UNIX)
    SET(EX_LINK_LIBRARIES )
ENDIF(UNIX)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${EX_LINK_LIBRARIES}
)