PROJECT(JNIUtilities VERSION 1.0.0.0)
MESSAGE(STATUS "${PROJECT_NAME}")
MESSAGE(STATUS "    PROJECT_VERSION:    ${PROJECT_VERSION}")
MESSAGE(STATUS "    PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "    PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

FILE(GLOB_RECURSE SCRIPT_FILES
    ${PROJECT_SOURCE_DIR}/*.bat
)

FILE(GLOB_RECURSE RESOURCE_FILES
    ${PROJECT_SOURCE_DIR}/resource.h
)

FILE(GLOB_RECURSE INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hpp
)

FILE(GLOB_RECURSE SRC_FILES 
    ${PROJECT_SOURCE_DIR}/*.c
    ${PROJECT_SOURCE_DIR}/*.cpp
)

FILE(INSTALL ${RESOURCE_FILES} DESTINATION ${PROJECT_BINARY_DIR})

SOURCE_GROUP("Header Files"   FILES "${INCLUDE_FILES}")
SOURCE_GROUP("Source Files"   FILES "${SRC_FILES}")
SOURCE_GROUP("Script Files"   FILES "${SCRIPT_FILES}")
SOURCE_GROUP("Resource Files" FILES "${RESOURCE_FILES}")

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/DynamicLibraryLoader
)

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${INCLUDE_FILES}
    ${SRC_FILES}
    ${SCRIPT_FILES}
    ${RESOURCE_FILES}
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    DynamicLibraryLoader
)