PROJECT(Thread)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

ADD_DEFINITIONS(
    -DENBALED_CPP_11=0
)

FILE(GLOB_RECURSE INCLUDE_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

FILE(GLOB_RECURSE SOURCE_FILES 
        ${CMAKE_CURRENT_SOURCE_DIR}/*.c
        ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

SOURCE_GROUP("Header Files" FILES "${INCLUDE_FILES}")
SOURCE_GROUP("Source Files" FILES "${SOURCE_FILES}")

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${INCLUDE_FILES}
    ${SOURCE_FILES}
)

IF(NOT MSVC)
    SET(EX_LINK_LIBRARIES pthread)
ELSE()
    SET(EX_LINK_LIBRARIES )
ENDIF() # ENDIF NOT MSVC

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${EX_LINK_LIBRARIES}
)